Change keybind to open a floating terminal.

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -24,5 +24,4 @@ display-inlay-hints = true
 [keys.normal."'"]
 y = ":sh zellij run --floating -n 'yazi picker' --width 80% -x 10% --height 80% -y 10% -- /home/jacob/.config/helix/open_in_helix_from_yazi.sh"
 
-[keys.normal."t"]
-f = ":sh zellij run --floating -n 'yazi picker' --width 80% -x 10% --height 80% -y 10% -- bash"
+f = ":sh zellij run --floating -n 'Terminal' --width 80% -x 10% --height 80% -y -c 10% -- bash"
