--- a/helix/config.toml
+++ b/helix/config.toml
@@ -22,6 +22,6 @@ display-inlay-hints = true
 
 # config.toml
 [keys.normal."'"]
-y = ":sh zellij run --floating -n 'yazi picker' --width 80% -x 10% --height 80% -y 10% -- /home/jacob/.config/helix/open_in_helix_from_yazi.sh"
+y = ":sh zellij run --floating -n 'yazi picker' --width 80% -x 10% --height 80% -y 10% -- /home/ubuntu/.config/helix/open_in_helix_from_yazi.sh"
 
-f = ":sh zellij run --floating -n 'Terminal' --width 80% -x 10% --height 80% -y -c 10% -- bash"
+f = ":sh zellij run --floating -n 'Terminal' --width 80% -x 10% --height 80% -y 10% -c -- bash"
